all-apps-ingress/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "wildcard-issuer"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: monitoring-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "*.megaitservices.com.ng"
    secretName: monitoring-cert-secret
  rules:
  - host: monitoring.megaitservices.com.ng
    http:
      paths:
      - path: /prometheus
        pathType: Prefix
        backend:
          service: 
            name: prometheus
            port: 
              number: 9090
      - path: /grafana
        pathType: Prefix
        backend:
          service: 
            name: grafana
            port: 
              number: 3000
