all-apps-ingress/sharkapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-cluster-issuer"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: sharkapp-ingress
  namespace: sharkapp
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - sharkapp.megaitservices.com.ng
    secretName: sharkapp-tls
  rules:
  - host: sharkapp.megaitservices.com.ng
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: sharkapp
            port: 
              number: 8001
