all-apps-ingress/sockshop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "wildcard-issuer"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: sockshop-ingress
  namespace: sock-shop
spec:
  tls:
  - hosts:
    - "*.megaitservices.com.ng"
    secretName: sockshop-cert-secret
  rules:
  - host: sockshop.megaitservices.com.ng
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: front-end
            port: 
              number: 80
